@@ -1,3 +1,7 @@
+2006-11-13  Hajime Ishitani <pigmon@mail.snd.co.jp>
+
+	* src/if_8139.c: Enabled "PUN/LinkChg" interrupt.
+
 2005-12-02  Andrew Lunn  <andrew.lunn@ascom.ch>
 
 	* src/if_8139.c (rltk8139_deliver): Fix the compiler warnings by
